--- a/src/main/java/controllers/CodificationGUI.form
+++ b/src/main/java/controllers/CodificationGUI.form
@@ -76,7 +76,7 @@
                       <text value="Encode"/>
                     </properties>
                   </component>
-                  <grid id="dbd9f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="dbd9f" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -92,6 +92,11 @@
                           <text value="Decode"/>
                         </properties>
                       </component>
+                      <vspacer id="19393">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </vspacer>
                     </children>
                   </grid>
                 </children>
@@ -152,14 +157,6 @@
               </model>
             </properties>
           </component>
-          <component id="bc4ed" class="javax.swing.JSpinner" binding="goulombDivisor">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <foreground color="-16008940"/>
-            </properties>
-          </component>
           <component id="d7635" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -172,6 +169,14 @@
             </constraints>
             <properties>
               <text value="Goulomb (K)"/>
+            </properties>
+          </component>
+          <component id="bc4ed" class="javax.swing.JSpinner" binding="goulombDivisor">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-16008940"/>
             </properties>
           </component>
         </children>
