--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -72,6 +72,37 @@ li{
   height: 3px;
 }
 
+@keyframes surgir{
+  0%{
+    transform: translateY(-10px);
+    opacity: 0;
+  }80%{
+    opacity: 1;
+    transform: translateY(5px);
+  }100%{
+    transform: translateY(0px);
+  }
+}
+
+@keyframes rotate{
+  0%{
+    transform: rotate(-10deg);
+  }50%{
+    transform: rotate(10deg);
+  }100%{
+    transform: rotate(0deg);
+  }
+}
+
+.custom-icon:hover{
+    transform:scale(1.1);
+    transition:0.5s;
+}
+
+.network-icon:hover{
+  animation:rotate 0.5s ease-in-out forwards;
+}
+
 
 
 
