--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,6 +94,14 @@ li{
   }
 }
 
+@keyframes rotate360{
+  0%{
+    transform: rotate(0deg);
+  }100%{
+    transform: rotate(360deg);
+  }
+}
+
 .custom-icon:hover{
     transform:scale(1.1);
     transition:0.5s;
